force-app/main/default/objects/FNS_AdminConfiguration__c/FNS_AdminConfiguration__c.object-meta.xml
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <label>Admin Configuration</label>
</CustomObject>