force-app/main/default/objects/FNS_AdminConfiguration__c/fields/FNS_ClosingSoonNoOfDays__c.field-meta.xml
<CustomField>
    <fullName>FNS_ClosingSoonNoOfDays__c</fullName>
    <label>Closing Soon No Of Days</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>