force-app/main/default/objects/FNS_AdminConfiguration__c/fields/FNS_EditableDispositionValue__c.field-meta.xml
<CustomField>
    <fullName>FNS_EditableDispositionValue__c</fullName>
    <label>Editable Disposition Value</label>
    <length>255</length>
    <type>Text</type>
</CustomField>