force-app/main/default/objects/FNS_AdminConfiguration__c/fields/FNS_RestrictedDispositionValues__c.field-meta.xml
<CustomField>
    <fullName>FNS_RestrictedDispositionValues__c</fullName>
    <label>Restricted Disposition Values</label>
    <length>255</length>
    <type>Text</type>
</CustomField>